[package]
name = "minecraft-scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.4", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
futures = "0.3.30"
roxmltree = "0.19.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["macros", "full"] }
